Changed video res
Bring index into main folder

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <title>Face Detection</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="face-api.min.js"></script>
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <script defer src="src/face-api.min.js"></script>
+    <script defer src="src/script.js"></script>
 </head>
 
 <body>
-    <video id="video" width="1920" height="1080" autoplay muted></video>
+    <video id="video" width="700" height="400" autoplay muted></video>
 </body>
 
 </html>
