Cropped face boundary

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-    <video id="video" width="700" height="400" autoplay muted></video>
+    <div id="container">
+        <video id="video" width="640" height="480" autoplay muted></video>
+    </div>
 </body>
 
 </html>
