--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="src/style.css" />
-    <script defer src="src/face-api.min.js"></script>
-    <script defer src="src/script.js"></script>
+    <!-- <script defer src="src/face-api.min.js"></script> -->
+    <script defer type="module" src="src/script.js"></script>
 </head>
 
 <body>
